# bocchi

./: .dockerignore  .editorconfig  .env  .env.example  .env.test  .gitattributes  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  app.json  buf.gen.yaml  buf.yaml  build.rs  docker-compose.yml  env.d.ts  go.mod  go.sum  main.go  next.config.ts  package.json  pnpm-lock.yaml  query.sql  sqlc.yaml  tailwind.config.ts  tsconfig.json  vercel.json  wrangler.toml
.sqlx/: query-1f04fe69c20412a14f916b0a49e14b10dbf0c90d5cb0d1f6c8f6503a4971f57b.json  query-3ca572d6f0cc86e765642d617902a6ac455722685ec41ac4dbaa6e20be870aa3.json  query-5f8937c92bb7ed2b3f491b8ec63177599d96c3d02f412d981b31d17713871167.json  query-606364c79e0990deb07dfbe6c32b3d302d083ec5333f3a5ce04113c38a041100.json  query-843923b9a0257cf80f1dff554e7dc8fdfc05f489328e8376513124dfb42996e3.json  query-9ce2cf7b9fa5073b2ab1ba348e28cd83b769a76ab77eca66d8874b27abfb9be8.json  query-f3f58600e971f1be6cbe206bba24f77769f54c6230e28f5b3dc719b869d9cb3f.json
.storybook/: main.ts  preview.tsx
android/: sentry.properties  settings.gradle
api/: accounts.go  accounts_test.go  api.go  api_test.go  auth.go  email.go  middleware.go  routes.go  timeline.go  tweets.go  tweets_test.go
app/: Login.tsx  _layout.tsx  actions.ts  actionts.ts  globals.css  index.tsx  layout.tsx  notifications.tsx  page.tsx  profile.tsx  settings.tsx  sign-in.tsx  sign-up.tsx  timeline.tsx  types.d.ts
cmd/: migrations.go  root.go  server.go
components/: about-widget.tsx  button.tsx  counter.tsx  editor.stories.tsx  editor.tsx  image-viewer.tsx  input.tsx  like.tsx  menu.tsx  navigation.stories.tsx  navigation.tsx  post.tsx  profile-edit.tsx  profile.tsx  sidebar.tsx  tagline.tsx  text.tsx  textarea.tsx  time.tsx  timeline.tsx  tweet.tsx  widgets.tsx
ent/: client.go  directmessage.go  directmessage_create.go  directmessage_delete.go  directmessage_query.go  directmessage_update.go  ent.go  like.go  (+32 more)
(+249 files in other folders)
