[package]
name = "bocchi"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
jsonwebtoken = "9"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "tls-native-tls",
    "derive",
    "postgres",
    "chrono",
] }
clap = { version = "4.5.32", features = ["derive", "env"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
prost = "0.13"
prost-types = "0.13"
tonic = "*"
dotenvy = "0.15.7"
tonic-web = "0.12.3"
tower-http = { version = "0.6.2", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }

[build-dependencies]
tonic-build = "*"
