[package]
name = "bocchi"
version = "0.1.0"
edition = "2024"

[workspace]
members = [".", "migrations"]

[dependencies]
clap = { version = "4.5.32", features = ["derive", "env"] }
dotenvy = "0.15.7"
sea-orm = { version = "1.1.0", features = [
    "sqlx-postgres",
    "runtime-tokio-native-tls",
    "macros",
] }
