[package]
name = "bocchi"
version = "0.1.0"
edition = "2024"

[workspace]
members = [".", "migrations"]

[dependencies]
argon2 = "0.5.3"
chrono = "0.4.40"
clap = { version = "4.5.32", features = ["derive", "env"] }
dotenvy = "0.15.7"
jsonwebtoken = "9.3.1"
prost = "0.13.5"
prost-types = "0.13.5"
sea-orm = { version = "1.1.0", features = [
    "sqlx-postgres",
    "runtime-tokio-native-tls",
    "macros",
] }
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.44.1", features = ["full"] }
tonic = "0.12.3"
migrations = { path = "migrations" }

[build-dependencies]
tonic-build = "0.12.3"

[dev-dependencies]
sea-orm = { version = "1.1.0", features = [
    "sqlx-sqlite",
    "runtime-tokio-native-tls",
    "macros",
] }
